@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: December 11, 2007</p>
+      <p>Last Updated: December 12, 2007</p>
     </td>
   </tr>
 </table>
@@ -975,6 +975,7 @@ Other memory:
 	* Fixed errors in C5471 configuration files for examples/uip
 	* Modified DHCPC (netutils/dhcpc) so that it should work in environments where
 	  there are more than one DHCPD server.
+	* NSH ifconfig command now shows uIP status was well (examples/nsh)
 </pre></ul>
 
 <table width ="100%">
